# taurus-view

./: CMakeLists.txt  README.md  build.sh  install.sh
config/: currency_list.csv
include/: AlphaVantageAPI.h  ConvertInput.h  ConvertOutput.h  Currencies.h  Currency.h  DataInput.h  DataOutput.h  Exception.h  functions.h  minorFunctions.h  processing.h  screens.h  terminalFunctions.h
src/: functions.cpp  main.cpp  minorFunctions.cpp  processing.cpp  screens.cpp  terminalFunctions.cpp
src/classes/: AlphaVantageAPI.cpp  Currencies.cpp  Currency.cpp  Exception.cpp
src/models/input/: ConvertInput.cpp  DataInput.cpp
src/models/output/: ConvertOutput.cpp  DataOutput.cpp
